--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Como solicitado na última sexta-feira, aqui estão alguns dos códigos feitos em C++ que realizei aos longos do ano no ensino médio e na faculdade.
+Como conversamos na última reunião, aqui estão alguns dos códigos feitos em C++ que realizei aos longos do ano no ensino médio e na faculdade.
 
 A maioria foi feito pelo "Arduino IDE", tanto os projetos do ensino médio quanto os da faculdade, e complidados diretamente por lá. Realizamos testes no TinkerCad, antes de construirmos os projetos na vida real.
 
