--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 Como conversamos na última reunião, aqui estão alguns dos códigos feitos em C++ que realizei aos longos do ano no ensino médio e na faculdade.
 
-A maioria foi feito pelo "Arduino IDE", tanto os projetos do ensino médio quanto os da faculdade, e complidados diretamente por lá. Realizamos testes no TinkerCad, antes de construirmos os projetos na vida real.
+A maioria foi feito pelo "Arduino IDE", tanto os projetos do ensino médio quanto os da faculdade, e complidados diretamente por lá. Realizamos alguns testes no TinkerCad, antes de construirmos os projetos na vida real.
 
 Em vezes, istalamos o "C/C++ Compile Run" diretamente no Visual Studio Code, que permitia compilar o código apenas usando a tecla F6
 
